# NOLauncher

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
nolauncher-derive/: Cargo.toml
nolauncher-derive/src/: lib.rs
src/: App.tsx  Login.tsx  ReactotronConfig.js  Settings.tsx  SideBar.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: migrated.json
src-tauri/src/: auth.rs  command.rs  constant.rs  event.rs  main.rs  mc_auth.rs  msaAuth.rs  utils.rs
src-tauri/src/auth/: minecraft.rs  msa_auth.rs
src-tauri/src/command/: README.md  accounts.rs  auth.rs  instance.rs  instances.rs  login.rs  metadata.rs  user.rs
src-tauri/src/command/accounts/: control.rs  info.rs
src-tauri/src/command/auth/: devicecode.rs  microsoft.rs  minecraft.rs  xbox.rs
src-tauri/src/command/instances/: control.rs  info.rs  manage.rs
src-tauri/src/command/metadata/: packages.rs
src-tauri/src/constant/: token.rs
src-tauri/src/event/: instance.rs  user.rs
src-tauri/src/minecraft/: auth.rs
src-tauri/src/utils/: accounts.rs  base_store.rs  config.rs  data.rs  metadata.rs  minecraft.rs  module.rs  result.rs  settings.rs
src-tauri/src/utils/metadata/: assets.rs  data.rs  handler.rs  packages.rs  processing.rs  versions.rs
src-tauri/src/utils/minecraft/: auth.rs  instance.rs  metadata.rs
src-tauri/src/utils/settings/: instances.rs
src/command/: instance.ts  splash.ts  user.ts
src/component/: Animation.tsx  Button.tsx  CharBox.tsx  Compose.tsx  SideBar.tsx  Step.tsx
src/component/Sidebar/: AccountPanel.tsx  SideBar.tsx
src/event/: instance.ts  user.ts
src/hook/: useCommand.ts
src/pages/: Auth.tsx  Create.tsx  Home.tsx  Login.tsx  ModList.tsx  Server.tsx
src/pages/Auth/: Auth.tsx  Content.tsx  Devicecode.tsx
src/pages/Create/: Create.tsx  NewInstance.tsx
src/pages/Home/: Home.tsx  Instance.tsx
src/state-hook/: store.ts
src/state-hook/hook/: useCommand.ts
src/state-hook/state/account/: accountSlice.ts
src/state-hook/state/side-panel/: accountListSlice.ts
